Fix scheduler logging defects and two SonarQube findings
SchedulerServiceImpl passed the caught exception as a trailing String
argument with no matching placeholder, which SLF4J discards silently, so
no failure detail ever reached the log. One catch block dropped the
exception entirely. Pass the Throwable itself in all five places, and
correct two garbled log messages.

The exceptions are still rewrapped as SchedulerException(e.getMessage()),
losing the cause: com.otilm:interfaces declares no (String, Throwable)
constructor, so that needs a change there first.

SonarQube java:S6204 - Collectors.toList() -> Stream.toList().
SonarQube java:S4488 - @RequestMapping(method = POST) -> @PostMapping.

Move off the released 1.1.1 onto 1.1.2-SNAPSHOT.

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>